modification du nom de package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kamkam/music-search",
+  "name": "@kamkam1_0/music-search",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
