Ajout du validator pour toutes les plateformes, ajout du stream url pour soundcloud et youtube avec details et filter avec le format possibilité de ne pas resolve avec deezer et soundloucd avant de demander une playlist/album...

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kamkam1_0/music-search",
-  "version": "4.0.3",
+  "version": "5.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,13 @@
     "Deezer",
     "Spotify",
     "Soundcloud",
-    "Search"
+    "Search",
+    "Track",
+    "Playlist",
+    "Album",
+    "Resolve",
+    "Validator",
+    "URL"
   ],
   "homepage": "https://github.com/KamKam0/music-search",
   "author": "KamKam <kamkam.dev.contact@gmail.com>",
